--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -50,6 +50,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.3);
+  z-index: 50;
 
   &.show {
     display: block;
@@ -80,7 +81,7 @@
 
 .header {
   background-color: #131313;
-  z-index: 100;
+  z-index: 9999;
 
   &--black {
     background-color: $color-black;
@@ -98,6 +99,7 @@
   align-items: center;
   padding: 3.5rem 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
 
   @include respond (tablet) {
     padding: 3.2rem 0;
@@ -125,7 +127,7 @@
   text-decoration: none;
   transition: all .3s ease;
   cursor: pointer;
-  z-index: 500;
+  z-index: 9999;
 
   &:hover {
     color: $color-primary;
@@ -133,6 +135,7 @@
 
   &__input {
     display: none;
+
     &:checked~.cart-container {
       display: block;
     }
@@ -171,6 +174,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.3);
+  z-index: 999
 }
 
 .cart-body {
